Save for restart

--- a/hollow.html
+++ b/hollow.html
@@ -8,11 +8,12 @@
     <title>temp</title>
 </head>
 <header>
-    <nav>
+    <n>
         <ul>
-            <li><a rel="Home" href="home2.html">Home</a></li>
-            <li><a rel="prints" href="about.html">About</a></li>
+            <li><a rel="Home" href="hollow.html">Home</a></li>
+            <li><a rel="prints" href="prints.html">About</a></li>
             <li><a rel="about" href="about.html">Services</a></li>
+            <li><a rel="contact" href="contact.html">Contact</a></li>
         </ul>
     </nav>
 </header>
@@ -20,7 +21,9 @@
 </main>
 <!--add print and pics-->
 <footer>
-    <p>&copy; The Void, voidemail <a href="feedback.html" class="button-link">Feedback</a> </p> 
+    <p>&copy; The Void, voidemail <a href="feedback.html" class="button-link">Feedback</a> </p>
+    <img class="feedback-gif" src="Images/72cff9_6f045bea2d6940af82b73cfe5662c0de~mv2.gif" alt="Feedback GIF">
+ 
     <!--add void email -->
 </footer>
 </html>
