proccess feedback + css scripts

--- a/about.html
+++ b/about.html
@@ -33,39 +33,39 @@
     <p3>
         meet our leadership team...
     </p3>
-<img src="Images/72cff9_70bfc856c29145179a6ae69187445d99~mv2.png.webp" alt="L">
-    <p4>
-        L Wheeler
-they/them
-President
-Senior Graphic Designer
-    </p4>
+    <div class="team-member">
+        <img src="Images/72cff9_70bfc856c29145179a6ae69187445d99~mv2.png.webp" alt="L">
+        <p4>
+            L Wheeler
+            they/them
+            President
+            Senior Graphic Designer
+     </p4>
 
 <img src="Images/72cff9_0917aa36ddae44ee8a2f86df1af9e228~mv2.png.webp" alt="">
     <p4>
         Peyton Grant
-she/her
-Vice President
-Fashion Director
+        she/her
+        Vice President
+        Fashion Director
     </p4>
+
     <img src="Images/72cff9_3764b2724475418b95ec8ddc61876268~mv2.png.webp" alt="">
    <p4>
-    Lexie Leighton
-she/they
-Creative Director
-Makeup Director
+        Lexie Leighton
+        she/they
+        Creative Director
+        Makeup Director
    </p4>
 
    <img src="Images/72cff9_cb9846bcb0d845948eda7fa8d350fa7a~mv2.png.webp" alt="">
     <p4>
         Tabitha Chatman
-she/her
-Financial Officer
-Technical Director
+        she/her
+        Financial Officer
+        Technical Director
     </p4>
-
-
-
+    </div>
 </main>
 <footer>
     <p>&copy; The Void, voidemail <a href="feedback.html" class="button-link">Feedback</a> </p> 
