--- a/contact.html
+++ b/contact.html
@@ -18,8 +18,7 @@
     </nav>
 </header>
 <main>
-</main>
-<main>
+    <div class="text-box">
     <form id="feedbackForm" action="process-feedback.php" method="post">
         <label for="name">Name:</label>
         <input type="text" name="name" id="name" required><br>
@@ -29,7 +28,7 @@
         <textarea name="message" id="message" required></textarea><br>
         <input type="submit" value="Submit">
     </form>
-    <div id="feedbackMessage"></div>
+    </div>
 </main>
 <footer>
     <p>&copy; The Void, voidemail <a href="feedback.html" class="button-link">Feedback</a> </p> 
