nav, and prettied up the about page

--- a/about.html
+++ b/about.html
@@ -12,27 +12,42 @@
         <ul>
             <li><a rel="Home" href="hollow.html">Home</a></li>
             <li><a rel="prints" href="prints.html">About</a></li>
+            <img class="feedback-gif" src="Images/72cff9_6f045bea2d6940af82b73cfe5662c0de~mv2.gif" alt="Feedback GIF">
             <li><a rel="about" href="about.html">Services</a></li>
             <li><a rel="contact" href="contact.html">Contact</a></li>
         </ul>
     </nav>
 </header>
 <main>
-    <h1>
-        what is the void?
-    </h1>
+    <div class="subtitleRight">
+        <h1>
+            What is the Void?
+        </h1>
+
+        <img src="Images/72cff9_eb33739e2ce44b8e83aab3ff1235d67b~mv2.jpg.webp" alt="BrickGroup">
+
+    </div>
+    <div class="paragraph">
     <p>
-        the void is CSU's first lifestyle, fashion, and culture magazine aimed at bringing together creative students from Colorado State University to collaborate on our publication and give our readers a unique perspective on Fort Collins' college scene. we hope to aid students in gaining professional experience relating to their interest in launching a potential career, and build portfolios for job opportunities. from interviewing local bands to local brands, we showcase talent in the Fort Collins community that would otherwise go under the noses of students and community members. our positions allow students to express their creativity, collaborate with brands and professional artists throughout Fort Collins and Colorado, and foster relationships and connections with people of diverse backgrounds and interests.  
+        The void is CSU's first lifestyle, fashion, and culture magazine aimed at bringing together creative students from Colorado State University to collaborate on our publication and give our readers a unique perspective on Fort Collins' college scene. we hope to aid students in gaining professional experience relating to their interest in launching a potential career, and build portfolios for job opportunities. from interviewing local bands to local brands, we showcase talent in the Fort Collins community that would otherwise go under the noses of students and community members. our positions allow students to express their creativity, collaborate with brands and professional artists throughout Fort Collins and Colorado, and foster relationships and connections with people of diverse backgrounds and interests.  
     </p>
+
+            <img src="Images/72cff9_f429d177c4ae40c6972472b6612ae5a9~mv2.jpg.webp" alt="Darkpic">
+    </div>
+    <div class="subtitleLeft">
     <h2>
         Who is the Void?
     </h2>
+    </div>
+    <div class="paragraph">
     <P2>
-        he void is a skilled student team of graphic designers, photographers, journalists, hair and makeup artists, fashion designers and coordinators, models, and our editorial board that are dedicated to showcasing their talents and creations in our issues.
+        The void is a skilled student team of graphic designers, photographers, journalists, hair and makeup artists, fashion designers and coordinators, models, and our editorial board that are dedicated to showcasing their talents and creations in our issues.
     </P2>
-    <p3>
-        meet our leadership team...
-    </p3>
+    </div>
+    <div class="subtitleCenter">
+    <h1>
+        Meet our Leadership Team...
+    </h1>
     <div class="team-member">
         <img src="Images/72cff9_70bfc856c29145179a6ae69187445d99~mv2.png.webp" alt="L">
         <p4>
