--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,7 @@
         <ul>
             <li><a rel="Home" href="hollow.html">Home</a></li>
             <li><a rel="prints" href="prints.html">About</a></li>
+            <img class="feedback-gif" src="Images/72cff9_6f045bea2d6940af82b73cfe5662c0de~mv2.gif" alt="Feedback GIF">
             <li><a rel="about" href="about.html">Services</a></li>
             <li><a rel="contact" href="contact.html">Contact</a></li>
         </ul>
