Mac gonna die :(

--- a/about.html
+++ b/about.html
@@ -8,31 +8,33 @@
     <title>temp</title>
 </head>
 <header>
-    <n>
+    <img class="jpeg" src="Images/72cff9_b82c9594a0614ac8bb3bc162fb4ef28f~mv2.jpeg.webp" alt="Feedback JPEG">
+    <nav>
         <ul>
             <li><a rel="Home" href="hollow.html">Home</a></li>
-            <li><a rel="prints" href="prints.html">About</a></li>
-            <img class="feedback-gif" src="Images/72cff9_6f045bea2d6940af82b73cfe5662c0de~mv2.gif" alt="Feedback GIF">
-            <li><a rel="about" href="about.html">Services</a></li>
+            <li><a rel="Prints" href="prints.html">prints</a></li>
+            <li><a rel="about" href="about.html">About</a></li>
             <li><a rel="contact" href="contact.html">Contact</a></li>
         </ul>
     </nav>
 </header>
+
 <main>
     <div class="subtitleRight">
         <h1>
             What is the Void?
         </h1>
-
-        <img src="Images/72cff9_eb33739e2ce44b8e83aab3ff1235d67b~mv2.jpg.webp" alt="BrickGroup">
-
+    <!--- edit the spacing of the photos
+       <img src="Images/72cff9_eb33739e2ce44b8e83aab3ff1235d67b~mv2.jpg.webp" alt="BrickGroup" class="right-align">
+    -->
     </div>
     <div class="paragraph">
     <p>
         The void is CSU's first lifestyle, fashion, and culture magazine aimed at bringing together creative students from Colorado State University to collaborate on our publication and give our readers a unique perspective on Fort Collins' college scene. we hope to aid students in gaining professional experience relating to their interest in launching a potential career, and build portfolios for job opportunities. from interviewing local bands to local brands, we showcase talent in the Fort Collins community that would otherwise go under the noses of students and community members. our positions allow students to express their creativity, collaborate with brands and professional artists throughout Fort Collins and Colorado, and foster relationships and connections with people of diverse backgrounds and interests.  
     </p>
-
+        <!---
             <img src="Images/72cff9_f429d177c4ae40c6972472b6612ae5a9~mv2.jpg.webp" alt="Darkpic">
+        -->
     </div>
     <div class="subtitleLeft">
     <h2>
