--- a/prints.html
+++ b/prints.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,21 +8,19 @@
     <title>temp</title>
 </head>
 <header>
-    <n>
+    <img class="jpeg" src="Images/72cff9_b82c9594a0614ac8bb3bc162fb4ef28f~mv2.jpeg.webp" alt="Feedback JPEG">
+    <nav>
         <ul>
             <li><a rel="Home" href="hollow.html">Home</a></li>
-            <li><a rel="prints" href="prints.html">About</a></li>
-            <img class="feedback-gif" src="Images/72cff9_6f045bea2d6940af82b73cfe5662c0de~mv2.gif" alt="Feedback GIF">
-            <li><a rel="about" href="about.html">Services</a></li>
+            <li><a rel="Prints" href="prints.html">prints</a></li>
+            <li><a rel="about" href="about.html">About</a></li>
             <li><a rel="contact" href="contact.html">Contact</a></li>
         </ul>
     </nav>
 </header>
 <main>
 </main>
-
 <footer>
-    <p>&copy; The Void, voidemail <a href="feedback.html" class="button-link">Feedback</a> </p> 
-    <!--add void email -->
+    <p>&copy; The Void, thevoidcsu@outlook.com <a href="feedback.html" class="button-link">Feedback</a> </p> 
 </footer>
 </html>
