I cant stay awake

--- a/hollow.html
+++ b/hollow.html
@@ -19,9 +19,26 @@
     </nav>
 </header>
 <main>
+<div class="HollowTitle">
+<h1>
+    Hollow Out Now!
+</h1>
+</div>
+
+
+<iframe class="iframe"
+src="https://www.flipsnack.com/7BEDCB77C6F/hollow/full-view.html" 
+width="80%" 
+height="400px" 
+frameborder="0" 
+allowfullscreen="true">
+</iframe>
+
+
+
 </main>
-<!--add print and pics-->
 <footer>
-    <p>&copy; The Void, thevoidcsu@outlook.com <a href="feedback.html" class="button-link">Feedback</a> </p> 
+    <img src="Images/72cff9_6f045bea2d6940af82b73cfe5662c0de~mv2.gif" alt="Void Gif" class="jpeg">
+    <p>&copy; The Void, thevoidcsu@outlook.com <a href="feedback.html" class="button-link">Feedback</a></p>
 </footer>
 </html>
