--- a/hollow.html
+++ b/hollow.html
@@ -25,16 +25,15 @@
 </h1>
 </div>
 
-
-<iframe class="iframe"
+<!-- https://help.flipsnack.com/en/articles/107457-embedding-a-flipbook-on-your-website-->
+<iframe
 src="https://www.flipsnack.com/7BEDCB77C6F/hollow/full-view.html" 
 width="80%" 
 height="400px" 
 frameborder="0" 
-allowfullscreen="true">
+allowfullscreen="true"> 
+
 </iframe>
-
-
 
 </main>
 <footer>
