--- a/hollow.html
+++ b/hollow.html
@@ -12,9 +12,9 @@
     <nav>
         <ul>
             <li><a rel="Home" href="hollow.html">Home</a></li>
-            <li><a rel="Prints" href="prints.html">prints</a></li>
-            <li><a rel="about" href="about.html">About</a></li>
-            <li><a rel="contact" href="contact.html">Contact</a></li>
+            <li><a rel="Prints" href="prints.html">Prints</a></li>
+            <li><a rel="About" href="about.html">About</a></li>
+            <li><a rel="Contact" href="contact.html">Contact</a></li>
         </ul>
     </nav>
 </header>
