--- a/prints.html
+++ b/prints.html
@@ -12,13 +12,18 @@
     <nav>
         <ul>
             <li><a rel="Home" href="hollow.html">Home</a></li>
-            <li><a rel="Prints" href="prints.html">prints</a></li>
+            <li><a rel="Prints" href="prints.html">Prints</a></li>
             <li><a rel="about" href="about.html">About</a></li>
             <li><a rel="contact" href="contact.html">Contact</a></li>
         </ul>
     </nav>
 </header>
 <main>
+    
+
+
+
+
 </main>
 <footer>
     <img src="Images/72cff9_6f045bea2d6940af82b73cfe5662c0de~mv2.gif" alt="Void Gif" class="jpeg">
