Cleaned up the code, needs database implemetation and upload changes for connectivity

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Temp" content="Temp">
     <link rel="stylesheet" href="Styles.css">
-    <title>temp</title>
+    <title>About</title>
 </head>
 <header>
     <img class="jpeg" src="Images/72cff9_b82c9594a0614ac8bb3bc162fb4ef28f~mv2.jpeg.webp" alt="Feedback JPEG">
@@ -86,6 +86,7 @@
 </main>
 <footer>
     <img src="Images/72cff9_6f045bea2d6940af82b73cfe5662c0de~mv2.gif" alt="Void Gif" class="jpeg">
-    <p>&copy; The Void, thevoidcsu@outlook.com <a href="feedback.html" class="button-link">Feedback</a></p>
+    <p>&copy; The Void, thevoidcsu@outlook.com <a href="feedback.html" class="button-link">Feedback</a>
+    <a href="login.html" class="button-link">Member Login</a> </p>
 </footer>
 </html>
