--- a/login.html
+++ b/login.html
@@ -19,6 +19,7 @@
     </nav>
 </header>
 <main>
+    <!--add local file path instead-->
     <form method="post" action="login.php" class="text-box">
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required>
@@ -34,7 +35,8 @@
 </main>
 
 <footer>
-    <p>&copy; The Void, voidemail <a href="feedback.html" class="button-link">Feedback</a> <a href="login.html" class="button-link">Login</a> </p> 
-    <!--add void email -->
+    <img src="Images/72cff9_6f045bea2d6940af82b73cfe5662c0de~mv2.gif" alt="Void Gif" class="jpeg">
+    <p>&copy; The Void, thevoidcsu@outlook.com <a href="feedback.html" class="button-link">Feedback</a>
+    <a href="login.html" class="button-link">Member Login</a> </p>
 </footer>
 </html>
