--- a/registration.html
+++ b/registration.html
@@ -21,7 +21,7 @@
 <main>
 
     <br>
-    <!-- Registration form -->
+  <!--add local file path instead-->
     <form method="post" action="register.php" class="text-box">
         <label for="key">Secret Key:</label>
         <input type="text" id="key" name="key" required>
@@ -33,12 +33,12 @@
         <input type="password" id="password" name="password" required>
 
         <button type="submit">Register</button>
-        <!--add jump to login page-->
     </form>
 </main>
 <footer>
-    <p>&copy; The Void, thevoidcsu@outlook.com <a href="feedback.html" class="button-link">Feedback</a></p>
     <img src="Images/72cff9_6f045bea2d6940af82b73cfe5662c0de~mv2.gif" alt="Void Gif" class="jpeg">
+    <p>&copy; The Void, thevoidcsu@outlook.com <a href="feedback.html" class="button-link">Feedback</a>
+    <a href="login.html" class="button-link">Member Login</a> </p>
 </footer>
 </body>
 </html>
